--- a/src/app/pages/public/portfolio/portfolio.component.html
+++ b/src/app/pages/public/portfolio/portfolio.component.html
@@ -1,1 +1,44 @@
-<p>portfolio works!</p>
+<!-- container -->
+<div class="container-fluid">
+  <!-- row -->
+  <div class="p-30-0">
+    <!-- col -->
+    <div class="col-lg-12">
+      <div class="art-filter mb-30">
+        <a href="#" data-filter="*" class="art-link art-current">All Categories</a>
+        <a href="#" data-filter=".webTemplates" class="art-link">Web Templates</a>
+        <a href="#" data-filter=".logos" class="art-link">Logos</a>
+        <a href="#" data-filter=".drawings" class="art-link">Drawings</a>
+        <a href="#" data-filter=".ui" class="art-link">UI Elements</a>
+      </div>
+    </div>
+    <!-- col end -->
+
+    <div class="art-grid art-grid-2-col art-gallery">
+      <!-- grid item -->
+      <div *ngFor="let project of projects" class="art-grid-item webTemplates">
+        <!-- grid item frame -->
+        <a data-fancybox="gallery" [href]="project.image" class="art-a art-portfolio-item-frame art-horizontal">
+          <!-- img -->
+          <img [src]="project.thumbnail" alt="{{ project.title }}" />
+          <!-- zoom icon -->
+          <span class="art-item-hover"><i class="fas fa-expand"></i></span>
+        </a>
+        <!-- grid item frame end -->
+        <!-- description -->
+        <div class="art-item-description">
+          <!-- title -->
+          <h5 class="mb-15">Project title</h5>
+          <div class="mb-15">Sit amet, consectetur adipisicing elit. Quas, architecto.</div>
+          <!-- button -->
+          <a href="portfolio-single.html" class="art-link art-color-link art-w-chevron">Read more</a>
+        </div>
+        <!-- description end -->
+      </div>
+      <!-- grid item end -->
+    </div>
+  </div>
+  <!-- row end -->
+</div>
+
+<!--<app-footer></app-footer>-->
