--- a/src/app/pages/public/portfolio/portfolio.component.html
+++ b/src/app/pages/public/portfolio/portfolio.component.html
@@ -1,44 +1,26 @@
-<!-- container -->
 <div class="container-fluid">
-  <!-- row -->
   <div class="p-30-0">
-    <!-- col -->
-    <div class="col-lg-12">
+    <!--<div class="col-lg-12">
       <div class="art-filter mb-30">
-        <a href="#" data-filter="*" class="art-link art-current">All Categories</a>
-        <a href="#" data-filter=".webTemplates" class="art-link">Web Templates</a>
-        <a href="#" data-filter=".logos" class="art-link">Logos</a>
-        <a href="#" data-filter=".drawings" class="art-link">Drawings</a>
-        <a href="#" data-filter=".ui" class="art-link">UI Elements</a>
+        <a *ngFor="let filter of filters" href="#" [attr.data-filter]="filter.filter" class="art-link">{{
+          filter.name
+        }}</a>
       </div>
-    </div>
-    <!-- col end -->
-
+    </div>-->
     <div class="art-grid art-grid-2-col art-gallery">
-      <!-- grid item -->
-      <div *ngFor="let project of projects" class="art-grid-item webTemplates">
-        <!-- grid item frame -->
+      <div *ngFor="let project of projects" class="art-grid-item" [ngClass]="project.filter">
         <a data-fancybox="gallery" [href]="project.image" class="art-a art-portfolio-item-frame art-horizontal">
-          <!-- img -->
           <img [src]="project.thumbnail" alt="{{ project.title }}" />
-          <!-- zoom icon -->
           <span class="art-item-hover"><i class="fas fa-expand"></i></span>
         </a>
-        <!-- grid item frame end -->
-        <!-- description -->
         <div class="art-item-description">
-          <!-- title -->
           <h5 class="mb-15">{{ project.title }}</h5>
           <div class="mb-15">{{ project.description | slice : 0 : 100 }}...</div>
-          <!-- button -->
           <a [href]="project.url" target="_blank" class="art-link art-color-link art-w-chevron">Visitar</a>
         </div>
-        <!-- description end -->
       </div>
-      <!-- grid item end -->
     </div>
   </div>
-  <!-- row end -->
 </div>
 
-<!--<app-footer></app-footer>-->
+<app-footer></app-footer>
