--- a/src/app/pages/template/core/info-bar/info-bar.component.html
+++ b/src/app/pages/template/core/info-bar/info-bar.component.html
@@ -93,7 +93,9 @@
       <!-- links frame -->
       <div class="art-links-frame p-15-15">
         <!-- download cv button -->
-        <a href="files/cv.pdf" class="art-link" download>Download cv <i class="fas fa-download"></i></a>
+        <a *ngFor="let object of infobar" [href]="object.cv" class="art-link" download
+          >Download cv <i class="fas fa-download"></i
+        ></a>
       </div>
       <!-- links frame end -->
     </div>
